# zephyrite

./: .commitlintrc.json  .gitignore  .gitmessage  .rustfmt.toml   Cargo.toml  README.md  justfile  package-lock.json  package.json
.cargo/: config.toml  nextest.toml
.github/workflows/: rust.yml
dagger/: README.md  go.mod  main.go
docs/: CONVENTIONAL_COMMITS.md  KEY_VALIDATION_RULES.md  NEXTEST_SETUP.md
src/: configs.rs  lib.rs  main.rs
src/server/: handlers.rs  mod.rs  types.rs
src/storage/: disk.rs  engine.rs  error.rs  errors.rs  memory.rs  mod.rs  persistent.rs  utils.rs  wal.rs
src/storage/disk/: buffer.rs  disk.rs  header.rs  index.rs  mod.rs  page.rs  page_manager.rs
src/utils/: mod.rs  time.rs
tests/: http_server.rs
