[package]
name = "zephyrite"
version = "0.1.0"
edition = "2024"
description = "A high-performance, distributed key-value store built in Rust"
license = "MIT"
repository = "https://github.com/minikin/zephyrite"
authors = ["Oleksandr Prokhorenko <your.email@example.com>"]
keywords = ["database", "key-value", "distributed", "storage", "wal"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.85"

[dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "macros"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"
reqwest = { version = "0.12", features = ["json"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
