[package]
name = "zephyrite"
version = "0.1.0"
edition = "2024"
description = "A high-performance, distributed key-value store built in Rust"
license = "MIT"
repository = "https://github.com/minikin/zephyrite"
authors = ["Oleksandr Prokhorenko <your.email@example.com>"]
keywords = ["database", "key-value", "distributed", "storage", "wal"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.85"

[dependencies]
tokio = { version = "1.46.0", features = ["rt-multi-thread", "net", "macros"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20.0"
reqwest = { version = "0.12.22", features = ["json"] }

[package.metadata.nextest]
default-timeout = "30s"

test-groups = [
  { name = "integration", max-threads = 1 },
  { name = "storage", max-threads = 4 },
]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"

[[test]]
name = "http_server"
path = "tests/http_server.rs"
harness = true

# Development profiles optimized for testing
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

# Release profile for performance testing
[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
